[package]
name = "rust-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {version = "0.5.2", package = "gtk4"}
gdk = { git = "https://github.com/gtk-rs/gtk4-rs.git", package = "gdk4" }
gobject-2-0-sys = "0.46.4"
gobject-sys = "0.16.3"
gio = "0.16.3"
